samples/_failures_safe/1761040767_66044f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d62794f1.c: In function ‘main’:
./samples/SAFE/__tmp_d62794f1.c:140:12: error: missing terminating " character
  140 |     printf("Compression completed successfully\n
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_d62794f1.c:140:5: error: expected expression at end of input
  140 |     printf("Compression completed successfully\n
      |     ^~~~~~
./samples/SAFE/__tmp_d62794f1.c:140:5: error: expected declaration or statement at end of input
